--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="box">
 		带着嘴巴去旅行
 	</div>
+	<script src="js.js"></script>
 </body>
 </html>
